bk_ida/gobmkida/c2/autohelperowl_defendpat353
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/autohelperowl_defendpat353/src/patterns/owl_defendpat.c:5262:28: error: use of undeclared identifier 'invalid_operation'
return !( ( v5 + v6 < 0) ^ __OFADD__( v5, v6) | ( v5 + v6 == 0)); 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/autohelperowl_defendpat353/src/patterns/owl_defendpat.c:5061:25: note: expanded from macro '__OFADD__'
#define __OFADD__(x, y) invalid_operation // Generate overflow flag for (x+y)
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/autohelperowl_defendpat353/src/obj/3/owl_defendpat.o] Error 1
